Fixed forms and other interactive algorithms Interactive mask/roi drawers still broken Marked all interactive algorithms as unstable